--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
 	margin: 0;
 	padding: 0;
-	font-family: 'PT Sans', sans-serif;
+	font-family: 'PT Sans', Arial, sans-serif;
 	background-color: #F2F2F2;
 	text-transform: uppercase;
 }
