--- a/css/style.css
+++ b/css/style.css
@@ -1010,7 +1010,6 @@ a  {
 	color: #ffffff;
 	font-size: 14px;
 	line-height: 24px;
-	text-align: left;
 	}
 	
 	
@@ -1065,7 +1064,14 @@ legend  {
 }
 
 
-.filter-input-checkbox :active  {
+.filter-label:hover,
+.filter-label:focus  {
+	outline-style: solid;
+	cursor: pointer;
+}
+
+
+.filter-input-checkbox:active  {
 	background: url(../img/checkbox-on.svg) no-repeat left;
 }
 
