--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ a  {
 
 
 .right-side:last-child  {
-	margin-left: 0;
+	margin-left: 5px;
 }
 
 
@@ -154,7 +154,7 @@ a  {
 
 .main-info  {
 	text-align: center;
-	margin-bottom: 53px;
+	margin-bottom: 50px;
 }	
 
 
@@ -198,8 +198,8 @@ a  {
 .reason  {
 	margin: 0;
 	padding: 0;
-	padding-top: 45px;
-	padding-bottom: 60px;
+	padding-top: 48px;
+	padding-bottom: 58px;
 	max-width: 400px;
 	background: #eeeeee;
 }
@@ -236,7 +236,7 @@ a  {
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	max-width: 400px;
-	padding-top: 45px;
+	padding-top: 50px;
 	padding-right: 60px;
 	padding-left: 60px;
 	min-height: 256px;
@@ -277,6 +277,11 @@ a  {
 }
 
 
+.reason-heading  {
+	padding-bottom: 2px;
+}
+
+
 .reason-text   {
 	margin-right: 60px;
 	margin-left: 60px;
@@ -284,6 +289,12 @@ a  {
 	line-height: 20px;
 }
 
+.reason-text-grey   {
+	margin-right: 58px;
+	margin-left: 58px;
+	font-size: 14px;
+	line-height: 20px;
+}
 
 .extra-reasons   {
 	margin: 0;
@@ -404,7 +415,7 @@ a  {
 	padding-bottom: 30px;
 	margin-right: auto;
 	margin-left: auto;
-	margin-top: 50px;
+	margin-top: 47px;
 }
 
 
@@ -1006,14 +1017,14 @@ a  {
 	justify-content: flex-start;
 	-ms-flex-wrap: nowrap;
 	flex-wrap: nowrap;
-	padding-top: 30px;
-	padding-bottom: 30px;
+	padding-top: 27px;
+	padding-bottom: 27px;
 	padding-left: 72px;
 	padding-right: 72px;
 	background: url(../img/filter-background.jpg) no-repeat top;
 	color: #ffffff;
-	font-size: 14px;
-	line-height: 24px;
+    font-size: 14px;
+    line-height: 21px;
 	}
 	
 	
@@ -1025,11 +1036,24 @@ fieldset  {
 
 
 legend  {
-	font-size: 14px;
+	font-size: 16px;
+	line-height: 21px;
 	font-weight: bold;
-	padding-left: 40px;
 }
 
+.infrostructure  ul{
+	margin-top: 20px;
+	padding: 0;
+}
+
+.type  {
+	margin-left: 116px;
+}
+
+.type ul{
+	margin-top: 20px;
+	padding: 0;
+}
 
 .filter-option  {
 	position: relative;
@@ -1037,7 +1061,7 @@ legend  {
 	padding: 0;
 	list-style: none;
 	padding-left: 40px;
-	margin-bottom: 20px;
+	margin-bottom: 22px;
 }
 
 	
@@ -1072,6 +1096,7 @@ legend  {
 .filter-label:focus  {
 	outline-style: solid;
 	cursor: pointer;
+	line-height: 24px;
 }
 
 
